--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -33,9 +33,4 @@
             right: 0;
         }
     }
-
-    button {
-        font-family: 'Bad Script', cursive;
-        font-weight: bold;
-    }
 }
